--- a/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CLUSTER_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CLUSTER_KOS.cfg
@@ -94,16 +94,27 @@ PART
 		maxThrust = 10175
 		heatProduction = 200
 		EngineType = LiquidFuel
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -126,16 +137,27 @@ PART
 		maxThrust = 5125
 		heatProduction = 100
 		EngineType = LiquidFuel
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -158,16 +180,27 @@ PART
 		maxThrust = 2000
 		heatProduction = 50
 		EngineType = LiquidFuel
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
