--- a/GameData/StarshipInterface/Parts/SEP_22_SHIP_HEADER_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_SHIP_HEADER_KOS.cfg
@@ -47,40 +47,81 @@ PART
 
 	vesselType = Ship
 	
-	RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
+	//Stock-sized Kerbin
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,!CommunityResourcePack]
     {
 		name = LiquidFuel
-        amount = 375
-        maxAmount = 375
+        amount = 776.25
+        maxAmount = 776.25
     }
-    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
+	RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,!CommunityResourcePack]
     {
 		name = Oxidizer
-        amount = 1350
-        maxAmount = 1350
+        amount = 948.75
+        maxAmount = 948.75
     }
-    RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,CommunityResourcePack]
+    {
+		name = LqdMethane
+        amount = 4122.3
+        maxAmount = 4122.3
+    }
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,CommunityResourcePack]
+    {
+		name = Oxidizer
+        amount = 1374.1
+        maxAmount = 1374.1
+    }
+
+    //KSRSS-sized Earth/Kerbin
+	RESOURCE:NEEDS[!RealSolarSystem,KSRSS,!CommunityResourcePack]
     {
 		name = LiquidFuel
-        amount = 350
-        maxAmount = 350
+        amount = 720
+        maxAmount = 720
     }
-    RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS,!CommunityResourcePack]
     {
 		name = Oxidizer
-        amount = 1260
-        maxAmount = 1260
+        amount = 880
+        maxAmount = 880
     }
-	RESOURCE:NEEDS[RealSolarSystem]
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS,CommunityResourcePack]
+    {
+		name = LqdMethane
+        amount = 3823.6
+        maxAmount = 3823.6
+    }
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS,CommunityResourcePack]
+    {
+		name = Oxidizer
+        amount = 1274.5
+        maxAmount = 1274.5
+    }
+
+	//RSS-sized Earth
+	RESOURCE:NEEDS[RealSolarSystem,!CommunityResourcePack]
     {
 		name = LiquidFuel
-        amount = 900
-        maxAmount = 900
+        amount = 1863
+        maxAmount = 1863
     }
-    RESOURCE:NEEDS[RealSolarSystem]
+    RESOURCE:NEEDS[RealSolarSystem,!CommunityResourcePack]
     {
 		name = Oxidizer
-        amount = 3240
-        maxAmount = 3240
+        amount = 2277
+        maxAmount = 2277
+    }
+	RESOURCE:NEEDS[RealSolarSystem,CommunityResourcePack]
+    {
+		name = LqdMethane
+        amount = 9893.5
+        maxAmount = 9893.5
+    }
+    RESOURCE:NEEDS[RealSolarSystem,CommunityResourcePack]
+    {
+		name = Oxidizer
+        amount = 3297.8
+        maxAmount = 3297.8
     }
 }
