--- a/GameData/StarshipInterface/Parts/SEP_22_SHIP_TANKER_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_SHIP_TANKER_KOS.cfg
@@ -111,18 +111,27 @@ PART
 		thrusterPower = 20
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
-			resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
-			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -139,18 +148,27 @@ PART
 		thrusterPower = 35
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
-			resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
-			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -167,18 +185,27 @@ PART
 		thrusterPower = 50
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
-			resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
-			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -209,15 +236,27 @@ PART
 		multFlow = 2
 		overrideStagingIconIfBlank = false
 		
-        PROPELLANT
+        PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
+			DrawGauge = True
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 
         atmosphereCurve 
@@ -249,15 +288,27 @@ PART
 		multFlow = 2
 		overrideStagingIconIfBlank = false
 
-        PROPELLANT
+        PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
+			DrawGauge = True
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 
         atmosphereCurve
@@ -334,47 +385,88 @@ PART
 		cameraFoVMin = 30
 	}
 
-	MODULE
+	MODULE:NEEDS[kOS,!RealismOverhaul,!FerramAerospaceResearch]
     {
         name = kOSProcessor
         diskSpace = 255000
     }
 
-    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
+    //Stock-sized Kerbin
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,!CommunityResourcePack]
     {
 		name = LiquidFuel
-        amount = 3250
-        maxAmount = 3250
+        amount = 6750
+        maxAmount = 6750
     }
-    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
+	RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,!CommunityResourcePack]
     {
 		name = Oxidizer
-        amount = 11700
-        maxAmount = 11700
+        amount = 8250
+        maxAmount = 8250
     }
-	RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,CommunityResourcePack]
+    {
+		name = LqdMethane
+        amount = 35846.1
+        maxAmount = 35846.1
+    }
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,CommunityResourcePack]
+    {
+		name = Oxidizer
+        amount = 11948.7
+        maxAmount = 11948.7
+    }
+
+    //KSRSS-sized Earth/Kerbin
+	RESOURCE:NEEDS[!RealSolarSystem,KSRSS,!CommunityResourcePack]
     {
 		name = LiquidFuel
-        amount = 5435
-        maxAmount = 5435
+        amount = 11250
+        maxAmount = 11250
     }
-    RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS,!CommunityResourcePack]
     {
 		name = Oxidizer
-        amount = 19566
-        maxAmount = 19566
+        amount = 13750
+        maxAmount = 13750
     }
-    RESOURCE:NEEDS[RealSolarSystem]
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS,CommunityResourcePack]
+    {
+		name = LqdMethane
+        amount = 59743.5
+        maxAmount = 59743.5
+    }
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS,CommunityResourcePack]
+    {
+		name = Oxidizer
+        amount = 19914.5
+        maxAmount = 19914.5
+    }
+
+	//RSS-sized Earth
+	RESOURCE:NEEDS[RealSolarSystem,!CommunityResourcePack]
     {
 		name = LiquidFuel
-        amount = 6500
-        maxAmount = 6500
+        amount = 13500
+        maxAmount = 13500
     }
-    RESOURCE:NEEDS[RealSolarSystem]
+    RESOURCE:NEEDS[RealSolarSystem,!CommunityResourcePack]
     {
 		name = Oxidizer
-        amount = 23400
-        maxAmount = 23400
+        amount = 16500
+        maxAmount = 16500
+    }
+	RESOURCE:NEEDS[RealSolarSystem,CommunityResourcePack]
+    {
+		name = LqdMethane
+        amount = 71692.2
+        maxAmount = 71692.2
+    }
+    RESOURCE:NEEDS[RealSolarSystem,CommunityResourcePack]
+    {
+		name = Oxidizer
+        amount = 23897.4
+        maxAmount = 23897.4
     }
 
     @EFFECTS
