--- a/GameData/StarshipInterface/Parts/SEP_23_SHIP_BODY_EXP_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_23_SHIP_BODY_EXP_KOS.cfg
@@ -367,18 +367,27 @@ PART
 		thrusterPower = 20
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
-			resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
-			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -395,18 +404,27 @@ PART
 		thrusterPower = 35
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
-			resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
-			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -423,18 +441,27 @@ PART
 		thrusterPower = 50
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
-			resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
-			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -465,15 +492,27 @@ PART
 		multFlow = 2
 		overrideStagingIconIfBlank = false
 
-        PROPELLANT
+        PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
+			DrawGauge = True
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 
         atmosphereCurve
@@ -505,15 +544,27 @@ PART
 		multFlow = 2
 		overrideStagingIconIfBlank = false
 
-        PROPELLANT
+        PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
+			DrawGauge = True
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 
         atmosphereCurve
@@ -559,47 +610,88 @@ PART
 		cameraFoVMin = 50
 	}
 
-	MODULE
+	MODULE:NEEDS[kOS,!RealismOverhaul,!FerramAerospaceResearch]
     {
         name = kOSProcessor
         diskSpace = 255000
     }
 
-    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
+    //Stock-sized Kerbin
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,!CommunityResourcePack]
     {
 		name = LiquidFuel
-        amount = 3000
-        maxAmount = 3000
+        amount = 6210
+        maxAmount = 6210
     }
-    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,!CommunityResourcePack]
     {
 		name = Oxidizer
-        amount = 10800
-        maxAmount = 10800
+        amount = 7590
+        maxAmount = 7590
     }
-	RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,CommunityResourcePack]
+    {
+		name = LqdMethane
+        amount = 32978.4
+        maxAmount = 32978.4
+    }
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,CommunityResourcePack]
+    {
+		name = Oxidizer
+        amount = 10992.8
+        maxAmount = 10992.8
+    }
+
+    //KSRSS-sized Earth/Kerbin
+	RESOURCE:NEEDS[!RealSolarSystem,KSRSS,!CommunityResourcePack]
     {
 		name = LiquidFuel
-        amount = 7825
-        maxAmount = 7825
+        amount = 16200
+        maxAmount = 16200
     }
-    RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS,!CommunityResourcePack]
     {
 		name = Oxidizer
-        amount = 28170
-        maxAmount = 28170
+        amount = 19800
+        maxAmount = 19800
     }
-	RESOURCE:NEEDS[RealSolarSystem]
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS,CommunityResourcePack]
+    {
+		name = LqdMethane
+        amount = 86030.7
+        maxAmount = 86030.7
+    }
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS,CommunityResourcePack]
+    {
+		name = Oxidizer
+        amount = 28676.9
+        maxAmount = 28676.9
+    }
+
+    //RSS-sized Earth
+	RESOURCE:NEEDS[RealSolarSystem,!CommunityResourcePack]
     {
 		name = LiquidFuel
-        amount = 51275
-        maxAmount = 51275
+        amount = 108000
+        maxAmount = 108000
     }
-    RESOURCE:NEEDS[RealSolarSystem]
+    RESOURCE:NEEDS[RealSolarSystem,!CommunityResourcePack]
     {
 		name = Oxidizer
-        amount = 184590
-        maxAmount = 184590
+        amount = 132000
+        maxAmount = 132000
+    }
+    RESOURCE:NEEDS[RealSolarSystem,CommunityResourcePack]
+    {
+		name = LqdMethane
+        amount = 573537.9
+        maxAmount = 573537.9
+    }
+    RESOURCE:NEEDS[RealSolarSystem,CommunityResourcePack]
+    {
+		name = Oxidizer
+        amount = 191179.3
+        maxAmount = 191179.3
     }
 
 	@EFFECTS
