--- a/GameData/StarshipInterface/Parts/SEP_23_SHIP_DEPOT_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_23_SHIP_DEPOT_KOS.cfg
@@ -397,18 +397,27 @@ PART
 		thrusterPower = 20
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
-			resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
-			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -425,18 +434,27 @@ PART
 		thrusterPower = 35
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
-			resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
-			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -453,18 +471,27 @@ PART
 		thrusterPower = 50
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
-			resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
-			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -495,15 +522,27 @@ PART
 		multFlow = 2
 		overrideStagingIconIfBlank = false
 
-        PROPELLANT
+        PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
+			DrawGauge = True
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 
         atmosphereCurve
@@ -535,15 +574,27 @@ PART
 		multFlow = 2
 		overrideStagingIconIfBlank = false
 
-        PROPELLANT
+        PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
+			DrawGauge = True
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 
         atmosphereCurve
@@ -578,47 +629,88 @@ PART
 		cameraFoVMin = 50
 	}
 
-	MODULE
+	MODULE:NEEDS[kOS,!RealismOverhaul,!FerramAerospaceResearch]
     {
         name = kOSProcessor
         diskSpace = 255000
     }
 
-    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
+    //Stock-sized Kerbin
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,!CommunityResourcePack]
     {
 		name = LiquidFuel
-        amount = 10875
-        maxAmount = 10875
+        amount = 22500
+        maxAmount = 22500
     }
-    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
+	RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,!CommunityResourcePack]
     {
 		name = Oxidizer
-        amount = 39150
-        maxAmount = 39150
+        amount = 27500
+        maxAmount = 27500
     }
-	RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,CommunityResourcePack]
+    {
+		name = LqdMethane
+        amount = 119487.1
+        maxAmount = 119487.1
+    }
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,CommunityResourcePack]
+    {
+		name = Oxidizer
+        amount = 39829.0
+        maxAmount = 39829.0
+    }
+
+    //KSRSS-sized Earth/Kerbin
+	RESOURCE:NEEDS[!RealSolarSystem,KSRSS,!CommunityResourcePack]
     {
 		name = LiquidFuel
-        amount = 20875
-        maxAmount = 20875
+        amount = 43200
+        maxAmount = 43200
     }
-    RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS,!CommunityResourcePack]
     {
 		name = Oxidizer
-        amount = 75150
-        maxAmount = 75150
+        amount = 52800
+        maxAmount = 52800
     }
-    RESOURCE:NEEDS[RealSolarSystem]
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS,CommunityResourcePack]
+    {
+		name = LqdMethane
+        amount = 229415.2
+        maxAmount = 229415.2
+    }
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS,CommunityResourcePack]
+    {
+		name = Oxidizer
+        amount = 76471.7
+        maxAmount = 76471.7
+    }
+
+	//RSS-sized Earth
+	RESOURCE:NEEDS[RealSolarSystem,!CommunityResourcePack]
     {
 		name = LiquidFuel
-        amount = 73925
-        maxAmount = 73925
+        amount = 153000
+        maxAmount = 153000
     }
-    RESOURCE:NEEDS[RealSolarSystem]
+    RESOURCE:NEEDS[RealSolarSystem,!CommunityResourcePack]
     {
 		name = Oxidizer
-        amount = 266130
-        maxAmount = 266130
+        amount = 187000
+        maxAmount = 187000
+    }
+	RESOURCE:NEEDS[RealSolarSystem,CommunityResourcePack]
+    {
+		name = LqdMethane
+        amount = 812512.0
+        maxAmount = 812512.0
+    }
+    RESOURCE:NEEDS[RealSolarSystem,CommunityResourcePack]
+    {
+		name = Oxidizer
+        amount = 270837.3
+        maxAmount = 270837.3
     }
 
 	MODULE
