--- a/GameData/StarshipInterface/Patches/SEP_kOS_Guidance.cfg
+++ b/GameData/StarshipInterface/Patches/SEP_kOS_Guidance.cfg
@@ -1,22 +1,41 @@
+@B9_TANK_TYPE[SEPLMOX]:NEEDS[CommunityResourcePack]
+{
+	@name = SEPLMOX
+	@tankMass = 0
+	@tankCost = 0
+	-RESOURCE,* {}
+	RESOURCE
+	{
+		name = LqdMethane
+		unitsPerVolume = 2.38974
+	}
+	RESOURCE
+	{
+		name = Oxidizer
+		unitsPerVolume = 0.79658
+	}
+}
+
+
+
 //------------Modify Parts--------------//
 
 
 
-@PART[SEP_22_BOOSTER_CORE_KOS,SEP_22_SHIP_BODY_KOS,SEP_22_SHIP_TANKER_KOS,SEP_22_SHIP_HEADER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS]:FOR[StarshipInterface]
-{
-	-MODULE[ModuleCryoTank],* {}
-	-MODULE[ModuleTankManager],* {}
-	-MODULE[ModuleFuelTanks],* {}
-}
+//@PART[SEP_22_BOOSTER_CORE_KOS,SEP_22_SHIP_BODY_KOS,SEP_22_SHIP_TANKER_KOS,SEP_22_SHIP_HEADER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS]:FOR[StarshipInterface]
+//{
+//	-MODULE[ModuleTankManager],* {}
+//	-MODULE[ModuleFuelTanks],* {}
+//}
 
 
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS]:FOR[StarshipInterface]
-{
-	MODULE:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,CryoTanks]
-	{
-		name = InterstellarFuelSwitch
-	}
-}
+//@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS]:FOR[StarshipInterface]
+//{
+//	MODULE:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,CryoTanks]
+//	{
+//		name = InterstellarFuelSwitch
+//	}
+//}
 
 
 
@@ -292,10 +311,10 @@
 	%emissiveConstant = 0.85
 	%thermalMassModifier = 1.0
 }
-@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,CryoTanks]:AFTER[CryoTanks]
-{
-	-MODULE[InterstellarFuelSwitch],* {}
-}
+//@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,CryoTanks]:AFTER[CryoTanks]
+//{
+//	-MODULE[InterstellarFuelSwitch],* {}
+//}
 
 
 
