--- a/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CORE_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CORE_KOS.cfg
@@ -136,18 +136,27 @@
 		thrusterPower = 75
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
-			resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
-			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -164,18 +173,27 @@
 		thrusterPower = 200
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
-			resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
-			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -192,18 +210,27 @@
 		thrusterPower = 400
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
-			resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
-			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -234,15 +261,27 @@
 		multFlow = 2
 		overrideStagingIconIfBlank = false
 		
-        PROPELLANT
+        PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
+			DrawGauge = True
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 
         atmosphereCurve 
@@ -274,15 +313,27 @@
 		multFlow = 2
 		overrideStagingIconIfBlank = false
 
-        PROPELLANT
+        PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
+			DrawGauge = True
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 
         atmosphereCurve
@@ -293,47 +344,88 @@
         }
 	}
 
-	MODULE
+	MODULE:NEEDS[kOS,!RealismOverhaul,!FerramAerospaceResearch]
     {
         name = kOSProcessor
         diskSpace = 255000
     }
 
-    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
+    //Stock-sized Kerbin
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,!CommunityResourcePack]
     {
 		name = LiquidFuel
-        amount = 16000
-        maxAmount = 16000
+        amount = 33120
+        maxAmount = 33120
     }
-    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS]
+	RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,!CommunityResourcePack]
     {
 		name = Oxidizer
-        amount = 57600
-        maxAmount = 57600
+        amount = 40480
+        maxAmount = 40480
     }
-	RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,CommunityResourcePack]
+    {
+		name = LqdMethane
+        amount = 175885
+        maxAmount = 175885
+    }
+    RESOURCE:NEEDS[!RealSolarSystem,!KSRSS,CommunityResourcePack]
+    {
+		name = Oxidizer
+        amount = 58628.3
+        maxAmount = 58628.3
+    }
+
+    //KSRSS-sized Earth/Kerbin
+	RESOURCE:NEEDS[!RealSolarSystem,KSRSS,!CommunityResourcePack]
     {
 		name = LiquidFuel
-        amount = 38260
-        maxAmount = 38260
+        amount = 79200
+        maxAmount = 79200
     }
-    RESOURCE:NEEDS[!RealSolarSystem,KSRSS]
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS,!CommunityResourcePack]
     {
 		name = Oxidizer
-        amount = 137736
-        maxAmount = 137736
+        amount = 96800
+        maxAmount = 96800
     }
-	RESOURCE:NEEDS[RealSolarSystem]
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS,CommunityResourcePack]
+    {
+		name = LqdMethane
+        amount = 420594.5
+        maxAmount = 420594.5
+    }
+    RESOURCE:NEEDS[!RealSolarSystem,KSRSS,CommunityResourcePack]
+    {
+		name = Oxidizer
+        amount = 140198.2
+        maxAmount = 140198.2
+    }
+
+	//RSS-sized Earth
+	RESOURCE:NEEDS[RealSolarSystem,!CommunityResourcePack]
     {
 		name = LiquidFuel
-        amount = 147826
-        maxAmount = 147826
+        amount = 306000
+        maxAmount = 306000
     }
-    RESOURCE:NEEDS[RealSolarSystem]
+    RESOURCE:NEEDS[RealSolarSystem,!CommunityResourcePack]
     {
 		name = Oxidizer
-        amount = 532174
-        maxAmount = 532174
+        amount = 374000
+        maxAmount = 374000
+    }
+	RESOURCE:NEEDS[RealSolarSystem,CommunityResourcePack]
+    {
+		name = LqdMethane
+        amount = 1625024.1
+        maxAmount = 1625024.1
+    }
+    RESOURCE:NEEDS[RealSolarSystem,CommunityResourcePack]
+    {
+		name = Oxidizer
+        amount = 541674.7
+        maxAmount = 541674.7
     }
 
     EFFECTS:NEEDS[Waterfall]
