--- a/GameData/StarshipInterface/Parts/SEP_22_RAPTOR2_SL_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_RAPTOR2_SL_KOS.cfg
@@ -116,16 +116,27 @@ PART
 		maxThrust = 580
 		heatProduction = 130
 		EngineType = LiquidFuel
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -148,16 +159,27 @@ PART
 		maxThrust = 600
 		heatProduction = 130
 		EngineType = LiquidFuel
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -180,16 +202,27 @@ PART
 		maxThrust = 2363
 		heatProduction = 130
 		EngineType = LiquidFuel
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
