--- a/GameData/StarshipInterface/Parts/SEP_23_SHIP_NOSE_EXP_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_23_SHIP_NOSE_EXP_KOS.cfg
@@ -88,18 +88,27 @@ PART
 		thrusterPower = 20
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
-			resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
-			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -116,18 +125,27 @@ PART
 		thrusterPower = 35
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
-			resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
-			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -144,18 +162,27 @@ PART
 		thrusterPower = 50
 		resourceName = LiquidFuel
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
-			ratio = 1
+			ratio = 0.9
 			DrawGauge = True
-			resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		PROPELLANT
+		PROPELLANT:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
-			ratio = 3.6
-			resourceFlowMode = STAGE_PRIORITY_FLOW
+			ratio = 1.1
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			ratio = 3
+			DrawGauge = True
+		}
+		PROPELLANT:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			ratio = 1
 		}
 		atmosphereCurve
 		{
@@ -202,7 +229,7 @@ PART
 		cameraFoVMin = 30
 	}
 
-	MODULE
+	MODULE:NEEDS[kOS,!RealismOverhaul,!FerramAerospaceResearch]
     {
         name = kOSProcessor
         diskSpace = 255000
