--- a/GameData/StarshipInterface/Parts/SLE_SS_OLM_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SLE_SS_OLM_KOS.cfg
@@ -154,16 +154,28 @@ PART
 		shutdownGUIName = #LOC_SLE_SS_OLM_Stop_Fueling
 		toggleGUIName = #LOC_SLE_SS_OLM_Toggle_Fueling
 
-		OUTPUT_RESOURCE
+		OUTPUT_RESOURCE:NEEDS[!CommunityResourcePack]
 		{
 			name = LiquidFuel
 			rate = 720
 		}
 	
-		OUTPUT_RESOURCE
+		OUTPUT_RESOURCE:NEEDS[!CommunityResourcePack]
 		{
 			name = Oxidizer
 			rate = 880
+		}
+
+		OUTPUT_RESOURCE:NEEDS[CommunityResourcePack]
+		{
+			name = LqdMethane
+			rate = 3000
+		}
+
+		OUTPUT_RESOURCE:NEEDS[CommunityResourcePack]
+		{
+			name = Oxidizer
+			rate = 1000
 		}
 
 		OUTPUT_RESOURCE
@@ -263,7 +275,7 @@ PART
 		stagingEnabled = false
 	}
 
-	MODULE
+	MODULE:NEEDS[kOS,!RealismOverhaul,!FerramAerospaceResearch]
     {
         name = kOSProcessor
         diskSpace = 255000
