--- a/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CORE_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CORE_KOS.cfg
@@ -511,13 +511,13 @@
 		}
 	}
 
-	DRAG_CUBE:NEEDS[!RealSolarSystem]
+	DRAG_CUBE:NEEDS[!RealSolarSystem,kOS,!RealismOverhaul,!FerramAerospaceResearch]
 	{
 		cube = 0, 206.5, 0.75, 2.5, 206.5, 0.75, 2.5, 19.6, 0.3, 60, 22.5, 0.99, 5.8, 206.5, 0.8, 2.5, 206.5, 0.85, 2.5, 0, 0, 0, 5, 41.3, 5
 		cube = 1, 206.5, 0.75, 2.5, 206.5, 0.75, 2.5, 19.6, 0.3, 60, 22.5, 0.99, 5.8, 206.5, 0.8, 2.5, 206.5, 0.85, 2.5, 0, 0, 0, 5, 41.3, 5
 		cube = 2, 206.5, 0.75, 2.5, 206.5, 0.75, 2.5, 19.6, 0.3, 60, 22.5, 0.99, 5.8, 206.5, 0.8, 2.5, 206.5, 0.85, 2.5, 0, 0, 0, 5, 41.3, 5
 	}
-	DRAG_CUBE:NEEDS[RealSolarSystem]
+	DRAG_CUBE:NEEDS[RealSolarSystem,kOS,!RealismOverhaul,!FerramAerospaceResearch]
 	{
 		cube = 0, 540, 0.65, 4.5, 540, 0.65, 4.5, 65, 0.3, 60, 65, 0.95, 5.8, 540, 0.7, 4.5, 540, 0.75, 4.5, 0, 0, 0, 9, 65.8, 9
 		cube = 1, 540, 0.65, 4.5, 540, 0.65, 4.5, 65, 0.3, 60, 65, 0.95, 5.8, 540, 0.7, 4.5, 540, 0.75, 4.5, 0, 0, 0, 9, 65.8, 9
