--- a/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CLUSTER_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_CLUSTER_KOS.cfg
@@ -552,11 +552,11 @@ PART
 		}
 	}
 
-	DRAG_CUBE:NEEDS[!RealSolarSystem]
+	DRAG_CUBE:NEEDS[!RealSolarSystem,kOS,!RealismOverhaul,!FerramAerospaceResearch]
 	{
 		cube = 0, 12, 0.75, 3, 12, 0.75, 3, 19.6, 0.3, 3, 22.5, 0.99, 0.3, 12, 0.8, 3, 12, 0.85, 3, 0, 0, 0, 5, 3.3, 5
 	}
-	DRAG_CUBE:NEEDS[RealSolarSystem]
+	DRAG_CUBE:NEEDS[RealSolarSystem,kOS,!RealismOverhaul,!FerramAerospaceResearch]
 	{
 		cube = 0, 27, 0.65, 5, 27, 0.65, 5, 65, 0.3, 3, 65, 0.95, 0.3, 27, 0.65, 5, 27, 0.65, 5, 0, 0, 0, 9, 3.3, 9
 	}
