--- a/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_GRIDFIN_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_GRIDFIN_KOS.cfg
@@ -121,12 +121,12 @@ PART
 		}
 	}
 
-	DRAG_CUBE:NEEDS[!RealSolarSystem]
+	DRAG_CUBE:NEEDS[!RealSolarSystem,kOS,!RealismOverhaul,!FerramAerospaceResearch]
 	{
 		cube = 0, 0.4, 0.85, 0.7, 0.4, 0.85, 0.7, 0.2, 0.65, 0.1, 0.2, 0.65, 0.1, 0.4, 0.85, 0.7, 0.4, 0.85, 0.7, 0, 0, 0, 2, 1.4, 0.2
 	}
 
-	DRAG_CUBE:NEEDS[RealSolarSystem]
+	DRAG_CUBE:NEEDS[RealSolarSystem,kOS,!RealismOverhaul,!FerramAerospaceResearch]
 	{
 		cube = 0, 0.6, 0.85, 1, 0.6, 0.85, 1, 0.3, 0.65, 0.125, 0.3, 0.65, 0.125, 0.6, 0.85, 1, 0.6, 0.85, 1, 0, 0, 0, 3, 2, 0.25
 	}
