--- a/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_INTER_KOS.cfg
+++ b/GameData/StarshipInterface/Parts/SEP_22_BOOSTER_INTER_KOS.cfg
@@ -226,6 +226,13 @@ PART
 			}
 		}
 	}
+	MODULE
+	{
+		name = ModuleSEPPartSwitchAction
+		SwitchID = DecoupleSwitch
+		ActionName = Decouple System
+		ShowCurrentSubtype = true
+	}
 	
 	MODULE
 	{
