--- a/GameData/StarshipInterface/Patches/SEP_kOS_Guidance.cfg
+++ b/GameData/StarshipInterface/Patches/SEP_kOS_Guidance.cfg
@@ -311,10 +311,6 @@
 	%emissiveConstant = 0.85
 	%thermalMassModifier = 1.0
 }
-//@PART[SEP_22_SHIP_HEADER_KOS]:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,kOS,CryoTanks]:AFTER[CryoTanks]
-//{
-//	-MODULE[InterstellarFuelSwitch],* {}
-//}
 
 
 
@@ -358,7 +354,7 @@
 
 
 
-@FARAeroStress:NEEDS[!RealismOverhaul,!FerramAerospaceResearch,FerramAerospaceResearch]:FOR[StarshipInterface]
+@FARAeroStress:NEEDS[!RealismOverhaul,FerramAerospaceResearch]:FOR[StarshipInterface]
 {
 	@FARPartStressTemplate[structural]
 	{
