--- a/GameData/StarshipInterface/Patches/TanksResources.cfg
+++ b/GameData/StarshipInterface/Patches/TanksResources.cfg
@@ -1,7 +1,8 @@
 @PART[SEP_22_SHIP_TANKER_KOS|SEP_22_SHIP_HEADER_KOS|SEP_22_SHIP_BODY_KOS|SEP_22_BOOSTER_CORE_KOS|SEP_23_SHIP_BODY_EXP_KOS|SEP_23_SHIP_DEPOT_KOS]:NEEDS[B9PartSwitch]:FOR[StarshipInterface]
 {
-	!RESOURCE[LiquidFuel]{}
-	!RESOURCE[Oxidizer]{}
+	!RESOURCE[LqdMethane],* {}
+	!RESOURCE[LiquidFuel],* {}
+	!RESOURCE[Oxidizer],* {}
 
 	MODULE
 	{
