--- a/Kerbal Space Program/GameData/StarshipInterface/Patches/Waterfall.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Patches/Waterfall.cfg
@@ -1,4 +1,4 @@
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[!FossilIndustries,Waterfall]:FOR[StarshipInterface]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[!FossilIndustries/Raptor?Plume,Waterfall]:FOR[StarshipInterface]
 {
     !EFFECTS {}
     EFFECTS
@@ -150,7 +150,7 @@
     }
 }
 
-@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[!FossilIndustries,Waterfall]:FOR[StarshipInterface]
+@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[!FossilIndustries/Raptor?Plume,Waterfall]:FOR[StarshipInterface]
 {
     !EFFECTS {}
     EFFECTS
@@ -321,7 +321,7 @@
     }
 }
 
-@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[!FossilIndustries,Waterfall]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[!FossilIndustries/Raptor?Plume,Waterfall]:FOR[StarshipInterface]
 {
     !EFFECTS {}
     EFFECTS
@@ -494,7 +494,7 @@
     }
 }
 
-@PART[SEP_22_SHIP_BODY_KOS|SEP_22_SHIP_TANKER_KOS|SEP_22_SHIP_CARGO_KOS|SEP_22_SHIP_CREW_KOS|SEP_22_BOOSTER_CORE_KOS|SEP_23_SHIP_BODY_EXP_KOS|SEP_23_SHIP_DEPOT_KOS]:FOR[StarshipInterface]:NEEDS[!FossilIndustries,Waterfall]
+@PART[SEP_22_SHIP_BODY_KOS|SEP_22_SHIP_TANKER_KOS|SEP_22_SHIP_CARGO_KOS|SEP_22_SHIP_CREW_KOS|SEP_22_BOOSTER_CORE_KOS|SEP_23_SHIP_BODY_EXP_KOS|SEP_23_SHIP_DEPOT_KOS]:FOR[StarshipInterface]:NEEDS[!FossilIndustries/Raptor?Plume,Waterfall]
 {
 	EFFECTS
 	{
