--- a/Kerbal Space Program/GameData/StarshipInterface/Patches/Waterfall Fossil.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Patches/Waterfall Fossil.cfg
@@ -1,4 +1,4 @@
-@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[FossilIndustries/Raptor?Plume,Waterfall]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_CLUSTER_KOS]:NEEDS[FossilIndustries,Waterfall]:FOR[StarshipInterface]
 {
 	!MODULE[ModuleWaterfallFX],* {}
 	!EFFECTS {}
@@ -282,7 +282,7 @@
 	}
 }
 
-@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[FossilIndustries/Raptor?Plume,Waterfall]:FOR[StarshipInterface]
+@PART[SEP_22_RAPTOR2_SL_KOS]:NEEDS[FossilIndustries,Waterfall]:FOR[StarshipInterface]
 {
 	!MODULE[ModuleWaterfallFX],* {}
   	!EFFECTS {}
@@ -524,7 +524,7 @@
   	}
 }
 
-@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[FossilIndustries/Raptor?Plume,Waterfall]:FOR[StarshipInterface]
+@PART[SEP_22_RAPTOR_VAC_KOS]:NEEDS[FossilIndustries,Waterfall]:FOR[StarshipInterface]
 {
 	!MODULE[ModuleWaterfallFX],* {}
   	!EFFECTS {}
@@ -653,7 +653,7 @@
 }
 
 
-@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[FossilIndustries/Raptor?Plume,Waterfall]:FOR[StarshipInterface]
+@PART[SEP_22_BOOSTER_CORE_KOS]:NEEDS[FossilIndustries,Waterfall]:FOR[StarshipInterface]
 {
 	!MODULE[ModuleWaterfallFX],* {}
 	EFFECTS
