--- a/Kerbal Space Program/GameData/StarshipInterface/Patches/Vent.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Patches/Vent.cfg
@@ -11,8 +11,9 @@
 		stagingEnabled = False
         ignitionThreshold = 0.1
         minThrust = 0
-        maxThrust:NEEDS[!RealSolarSystem] = 10
-        maxThrust:NEEDS[RealSolarSystem] = 50
+        maxThrust:NEEDS[!RealSolarSystem,!KSRSS] = 1
+        maxThrust:NEEDS[!RealSolarSystem,KSRSS] = 2.5
+        maxThrust:NEEDS[RealSolarSystem,!KSRSS] = 5
         heatProduction = 0
         fxOffset = 0, 0, 0
         nonThrustMotor = true
