--- a/Kerbal Space Program/GameData/StarshipInterface/Patches/B9TankTypes.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Patches/B9TankTypes.cfg
@@ -1,9 +1,25 @@
-@B9_TANK_TYPE[SEPLMOX]:NEEDS[CommunityResourcePack]
+B9_TANK_TYPE:NEEDS[!CommunityResourcePack]
 {
-	@name = SEPLMOX
-	@tankMass = 0
-	@tankCost = 0
-	-RESOURCE,* {}
+	name = SEPLFOXKOS
+	tankMass = 0
+	tankCost = 0
+	RESOURCE
+	{
+		name = LiquidFuel
+		unitsPerVolume = 0.45
+	}
+	RESOURCE
+	{
+		name = Oxidizer
+		unitsPerVolume = 0.55
+	}
+}
+
+B9_TANK_TYPE:NEEDS[CommunityResourcePack]
+{
+	name = SEPLMOXKOS
+	tankMass = 0
+	tankCost = 0
 	RESOURCE
 	{
 		name = LqdMethane
