--- a/Kerbal Space Program/GameData/StarshipInterface/Patches/Fuel Tanks.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Patches/Fuel Tanks.cfg
@@ -9,14 +9,14 @@
 		baseVolume = 1
 		SUBTYPE:NEEDS[!CommunityResourcePack]
 		{
-			name = SEPLFOX
-			tankType = SEPLFOX
+			name = SEPLFOXKOS
+			tankType = SEPLFOXKOS
 			title = LFO
 		}
 		SUBTYPE:NEEDS[CommunityResourcePack]
 		{
-			name = SEPLMOX
-			tankType = SEPLMOX
+			name = SEPLMOXKOS
+			tankType = SEPLMOXKOS
 			title = Methalox
 		}
 	}
@@ -60,7 +60,7 @@
 	//Stock-sized Kerbin
 	@MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,!KSRSS]:HAS[#moduleID[SEP_Fuel]]
 	{
-		@baseVolume = 73600
+		@baseVolume = 73600 // 70000
 	}
 
     //KSRSS-sized Earth/Kerbin
@@ -81,7 +81,7 @@
 	//Stock-sized Kerbin
 	@MODULE[ModuleB9PartSwitch]:NEEDS[!RealSolarSystem,!KSRSS]:HAS[#moduleID[SEP_Fuel]]
 	{
-		@baseVolume = 15000
+		@baseVolume = 15000 // 10000
 	}
 
     //KSRSS-sized Earth/Kerbin
