--- a/Kerbal Space Program/GameData/StarshipInterface/Patches/kOS.cfg
+++ b/Kerbal Space Program/GameData/StarshipInterface/Patches/kOS.cfg
@@ -7,6 +7,18 @@
     }
 }
 
+
+@PART[SLE_SS_OLIT_Base_KOS|SEP_22_BOOSTER_INTER_KOS]:NEEDS[XyphosAerospace]:AFTER[XyphosAerospace]
+{
+	-MODULE[kOSProcessor],0 {}
+}
+
+@PART[SEP_22_SHIP_TANKER_KOS|SEP_22_SHIP_CARGO_KOS|SEP_22_SHIP_CREW_KOS|SEP_23_SHIP_NOSE_EXP_KOS|SEP_23_SHIP_DEPOT_KOS]:NEEDS[XyphosAerospace]:AFTER[XyphosAerospace]
+{
+	-MODULE[kOSProcessor],1 {}
+}
+
+
 Localization
 {
 	en-us
